--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -71,21 +71,21 @@ button {
 /*main.html*/
 
 #background {
-	text-align:center;
-	margin:0 auto;
-	border: 1px solid black; 
 	background-color: #ccc;
 	background-image:url(../ressources/images/backTile.png);
 	background-repeat:no-repeat;
 }
 
-#eventManager {
+canvas {
+    text-align:center;
+	margin:0 auto;
+	border: 1px solid black; 
+}
+
+.layer {
     position: absolute;
 	top:0px;
 	left:0px;
-	text-align:center;
-	margin:0 auto;
-	border: 1px solid black; 
 	background-color: transparent;
 }
 
