--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -79,7 +79,7 @@ button {
 canvas {
     text-align:center;
 	margin:0 auto;
-	border: 1px solid black; 
+	border: 1px solid #ccc; 
 }
 
 .layer {
@@ -160,7 +160,7 @@ canvas {
 	width:100%;
 	padding:0;
 	margin:0;
-	background-color:#000;
+	background-color:#ccc;
 }
 
 .editor .menuEditor {
