range attacks finished and other nice features, see trello for detals

--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -92,10 +92,10 @@ canvas {
 	background-color: transparent;
 }
 
-#loadBar {
+.loadBar {
 	position:absolute;
-	margin-left:300px;
-	margin-top:200px;
+	top:30%;
+	left:20%;
 }
 /*fight.html*/
 
