--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -1,10 +1,18 @@
 /*general*/
 
+#global {
+	position: relative; 
+	margin-left: auto;
+	margin-right: auto;
+	width: 1136px;
+	height: 640px;
+}
+
 body {
 	overflow: hidden;
 	padding:0;
 	margin:0;
-	background-color:#ccc;
+	background-color: #fff;
 	color:#000;
 	font-family: JasmineUPC;
 }
@@ -85,8 +93,6 @@ button {
 canvas {
     text-align:center;
 	margin:0 auto;
-	border: 1px solid #ccc; 
-    /*margin-left: 100px;*/
 }
 
 .layer {
@@ -167,7 +173,6 @@ canvas {
 	width:100%;
 	padding:0;
 	margin:0;
-	background-color:#ccc;
 }
 
 .editor .menuEditor {
