--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -12,9 +12,9 @@ body {
 	overflow: hidden;
 	padding:0;
 	margin:0;
-	background-color: #fff;
+	background-color: #383838;
 	color:#000;
-	font-family: JasmineUPC;
+	font-family: Verdana;
 }
 
 h4, h5, ul {
@@ -35,18 +35,29 @@ button {
 
 .intro {
     position: absolute;
-	top:10%;
-	left:10%;
-	height:80%;
-    width:80%;
+	top:0;
+	left:0;
+	height:100%;
+    width:100%;
 	padding:0;
 	margin:0;
-	background-color:#000;
-	background-image:url(../ressources/images/intro.jpg);
+	background-color:#383838;
+	background-image:url(../ressources/images/covergame.jpg);
 	background-repeat:no-repeat;
 	background-attachment:inherit;
-	background-position:center bottom;
-	background-size:100% auto;
+	background-position:center center;
+	background-size:auto 100%;
+}
+
+.intro .introMenu {
+	color:#aead7a;
+    position: absolute;
+	top:0%;
+	left:0;
+	height:50%;
+    width:65%;
+	padding:0;
+	margin:0;
 }
 
 .intro h1 {
@@ -66,23 +77,22 @@ button {
 .intro .menu li{
 	font-size:1.3em;
 	margin:3%;
-	color: #fff;
 }
 
 .intro .menu li a{
-	color:#fff;
+	color:#aead7a;
 	text-decoration:none;
 }
 
 .intro .menu li a:hover{
-	color:#acc;
+	color:#f9e6d6;
 	text-decoration:none;
 }
 
 /*main.html*/
 
 #background {
-	background-color: #ccc;
+	background-color: #383838;
 	background-repeat:no-repeat;
 }
 
