fixed the bug with side panels / map move. remove last js file

--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -8,6 +8,11 @@
 	height: 640px;
 }
 
+.sidePanel {
+	background-color: #383838;
+	z-index: 999;
+}
+
 body {
 	overflow: hidden;
 	padding:0;
@@ -15,6 +20,7 @@ body {
 	background-color: #383838;
 	color:#000;
 	font-family: Verdana;
+	font-size: 20px;
 }
 
 h4, h5, ul {
