--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -4,6 +4,7 @@
 	position: relative; 
 	margin-left: auto;
 	margin-right: auto;
+	background-color: #383838;
 	width: 1136px;
 	height: 640px;
 }
@@ -38,6 +39,60 @@ button {
 }
 
 /*intro.html*/
+
+.styledSelectGreen {
+background-image: url(../ressources/images/green_list_background.png);
+   background-repeat: no-repeat;
+   background-color:#888888;
+   width: 134px;
+   font-size: 16px;
+   line-height: 1;
+   margin-left: 2px;
+   margin-right: 2px;
+   border: 0;
+   border-radius: 0;
+   height: 24px;
+   text-indent:15px;
+   appearance:none;
+   -moz-appearance:none;
+   -webkit-appearance: none;
+   }
+   
+.styledSelectRed {
+  	  background-image: url(../ressources/images/brown_list_background.png);
+      background-repeat: no-repeat;
+	  background-color:transparent;
+	  color:#aead7a;
+      width: 134px;
+      font-size: 16px;
+      line-height: 1;
+      margin-left: 2px;
+      margin-right: 2px;
+      border: 0;
+      border-radius: 0;
+      height: 24px;
+      text-indent:15px;
+      appearance:none;
+      -moz-appearance:none;
+      -webkit-appearance: none;
+}
+   
+.startButton {
+	background-color:transparent;
+    text-decoration:none;
+	position: absolute;
+	bottom: -29%;
+	right: 10%;
+	color:white;
+	width: 122px;
+	height: 107px;
+	border: none;
+	background-image: url(../ressources/images/startBoth.png);
+}
+
+.startButton:hover {
+	background-position: 0 -107px;
+}
 
 .intro {
     position: absolute;
