fixed target to blank. fixed monster zindex management when moving

--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -9,9 +9,13 @@
 	height: 640px;
 }
 
+.menuEditor {
+	z-index: 999;
+}
+
 .sidePanel {
 	background-color: #383838;
-	z-index: 999;
+	z-index: 998;
 }
 
 body {
