added tutorial in such a dirty way...

--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -110,6 +110,7 @@ button {
     width:100%;
 	padding:0;
 	margin:0;
+	z-index: 999;
 	background-color:#383838;
 	background-image:url(../ressources/images/covergame.jpg);
 	background-repeat:no-repeat;
