--- a/projects/easnoth/css/mainstyle.css
+++ b/projects/easnoth/css/mainstyle.css
@@ -43,45 +43,38 @@ button {
 
 /*intro.html*/
 
+.styledSelect {
+    background-repeat: no-repeat;
+    background-color:transparent;
+    width: 134px;
+    font-size: 16px;
+    line-height: 1;
+    margin-left: 2px;
+    margin-right: 2px;
+    border: 0;
+    border-radius: 0;
+    height: 24px;
+    text-indent:15px;
+    appearance:none;
+    -moz-appearance:none;
+    -webkit-appearance: none;
+}
+
 .styledSelectGreen {
-   background-image: url(../ressources/images/start/green_list_background.png);
-   background-repeat: no-repeat;
-   background-color:transparent;
-   width: 134px;
-   font-size: 16px;
-   line-height: 1;
-   margin-left: 2px;
-   margin-right: 2px;
-   border: 0;
-   border-radius: 0;
-   height: 24px;
-   text-indent:15px;
-   appearance:none;
-   -moz-appearance:none;
-   -webkit-appearance: none;
+    background-image: url(../ressources/images/start/green_list_background.png);
    }
    
 .styledSelectGreen option {
-   color:#aead7a;
+   background-color: #82983d;
 }
   
 .styledSelectRed {
-  	  background-image: url(../ressources/images/start/brown_list_background.png);
-      background-repeat: no-repeat;
-	  background-color:transparent;
-	  color:#aead7a;
-      width: 134px;
-      font-size: 16px;
-      line-height: 1;
-      margin-left: 2px;
-      margin-right: 2px;
-      border: 0;
-      border-radius: 0;
-      height: 24px;
-      text-indent:15px;
-      appearance:none;
-      -moz-appearance:none;
-      -webkit-appearance: none;
+  	 background-image: url(../ressources/images/start/brown_list_background.png);
+	 color:#aead7a;
+}
+
+.styledSelectRed option {
+   background-color: #682312;
 }
    
 .startButton {
@@ -98,7 +91,25 @@ button {
 }
 
 .startButton:hover {
+	cursor: pointer;
 	background-position: 0 -107px;
+}
+
+.backButton {
+	background-color:transparent;
+    text-decoration:none;
+	border: none;
+	position: absolute; 
+	top: 9%; 
+	left: 23%;
+	width: 30px;
+	height: 32px;
+	background-image: url(../ressources/images/start/backButton.png);
+}
+
+.backButton:hover {
+	cursor: pointer;
+	background-position: 0 -32px;
 }
 
 .intro {
@@ -148,27 +159,6 @@ button {
 	margin:3%;
 }
 
-.backButton {
-	background-color:transparent;
-    text-decoration:none;
-	border: none;
-	position: absolute; 
-	top: 9%; 
-	left: 23%;
-	width: 30px;
-	height: 32px;
-	background-image: url(../ressources/images/start/backButton.png);
-}
-
-.backButton:hover {
-	background-position: 0 -32px;
-}
-
-.intro .menu li a{
-	color:#aead7a;
-	text-decoration:none;
-}
-
 .intro .menu .creditLink {
 	color: #f9e6d6;
 }
@@ -177,6 +167,10 @@ button {
 	color: #aead7a;
 }
 
+.intro .menu li a{
+	color:#aead7a;
+	text-decoration:none;
+}
 
 .intro .menu li a:hover{
 	color:#f9e6d6;
@@ -219,48 +213,47 @@ canvas {
 	margin-left: 2%;
 }
 
-.monsterWatcher {
+.mapMenuPanel{
+	margin: 3%;
+	color: gray;
 	z-index: 999;
 	font-size: 75%;
+	width: 208px;
+	height: 118px;
 	text-align: center;
 	position:absolute;
+	background-image: url(../ressources/images/fight/battleBack.png);
+}
+
+.monsterWatcher {
 	top:0;
 	left:0;
-	border: 1px solid black;
-	background-color: #ccaa6a;
 }
 
 .dices {
-	z-index: 999;
-	font-size: 75%;
-	text-align: center;
-	position:absolute;
 	top:0;
 	right:0;
-	border: 1px solid black;
-	background-color: #aaaacc;
 }
 
 .mapWatcher {
-	z-index: 999;
-	font-size: 75%;
-	text-align: center;
-	position:absolute;
 	bottom:0;
 	left:0;
-	border: 1px solid black;
-	background-color: #aacccc;
 }
 
 .stuff {
-	z-index: 999;
-	font-size: 75%;
-	text-align: center;
-	position:absolute;
 	bottom:0;
 	right:0;
-	border: 1px solid black;
-	background-color: #aaccaa;
+}
+
+.stuff a{
+	font-size: 20px;
+	color:#aead7a;
+	text-decoration:none;
+}
+
+.stuff a:hover{
+	color:#f9e6d6;
+	text-decoration:none;
 }
 
 /*mapEditor.html*/
